--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -137,6 +137,7 @@
     "scr_XMLNabavniNalog",
     "scr_XMLNalogZaPrenos",
     "scr_XMLNalogZaProdaju",
+    "scr_XMLNalogZaProdaju_1",
     "scr_XMLTemeljniceInventure",
     "scr_XMLPrimke",
     "scr_XMLOtpremnice"
