--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -479,7 +479,7 @@
                             ),
                             "53",
                             Navigate(
-                                scr_XMLNalogZaProdaju,
+                                scr_XMLNalogZaProdaju_1,
                                 ScreenTransition.Fade
                             ),
                             "04",
