--- a/BSiNS/Src/scr_XMLNalogZaProdaju_1.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju_1.fx.yaml
@@ -312,7 +312,7 @@
         com_ProHeader_1 As com_Header:
             LayoutMinHeight: =640
             LayoutMinWidth: =App.Width
-            Title: ="NALOG ZA PRODAJU"
+            Title: ="NALOG ZA POVRAT"
 
         vrt_ProBody_1 As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
