--- a/BSiNS/Src/scr_XMLNalogZaProdaju_1.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju_1.fx.yaml
@@ -9,8 +9,8 @@
         );
         
         If(
-            !IsBlank(xmlData),
-            UpdateContext({xmlData: xmlData}),
+            !(reportFileContent = "{}"),
+            UpdateContext({xmlData: ParseJSON(reportFileContent).Sales_Header}),
             If(
                 !IsBlank(SelectedFile),
                 IfError(
