--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -202,7 +202,7 @@ com_Modal_1 As CanvasComponent:
                                         false
                                     );
                                     Navigate(
-                                        scr_XMLNalogZaProdaju_1,
+                                        scr_XMLNalogPovrata,
                                         ScreenTransition.Fade,
                                         {xmlData: ParseJSON(reportFileContent).Sales_Header}
                                     )
