--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -133,7 +133,7 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: =com_Modal.LotNoPropVisible || com_Modal.IsNabavniNalog
+                        Visible: =com_Modal.LotNoPropVisible || (com_Modal.IsNabavniNalog && com_Modal.LotNoPropVisible)
                         ZIndex: =1
 
                         TextCanvas3_12 As Text:
