--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -98,6 +98,8 @@ com_Footer As CanvasComponent:
                 FontSize: =20
                 Height: =32
                 Label: ="SPO"
+                LayoutMinHeight: =32
+                LayoutMinWidth: =160
                 OnCheck: =false
                 OnUncheck: =false
                 Width: =160
