--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -193,7 +193,7 @@ com_Modal_1 As CanvasComponent:
                                 Set(
                                     reportFileContent,
                                     Return.Run(
-                                        "SPO",
+                                        DropdownCanvas1.Selected.Value,
                                         fileName,
                                         ReadyForProcessing,
                                         ReadyForNAVProcessing
