--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -16,6 +16,8 @@ App As appinfo:
         ReadyForProcessing = "ReadyForProcessing";
         InProgress = "InProgress";
         ReadyForNAVProcessing = "ReadyForNavProcessing";
+        
+        ReturnTypes = ["SPO", "Ostalo"];
     OnStart: =
     StartScreen: =
     Theme: =RedTheme
