--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -102,7 +102,7 @@ com_Footer As CanvasComponent:
                 LayoutMinWidth: =160
                 OnCheck: =false
                 OnUncheck: =false
-                Visible: =true
+                Visible: =com_Footer.IsPovrat
                 Width: =160
                 X: =
                 Y: =0
