--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -83,8 +83,10 @@ com_Header As CanvasComponent:
                 ZIndex: =1
 
             "BarcodeReader2 As 'Barcode Reader'":
+                AlignInContainer: =AlignInContainer.Stretch
                 BorderFillColor: =RGBA(189, 49, 51, 1)
                 BorderRadius: =5
+                BorderStyle: =BorderStyle.Solid
                 BorderThickness: =1.5
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledContentColor: =RGBA(166, 166, 166, 1)
@@ -96,7 +98,7 @@ com_Header As CanvasComponent:
                 HoverBorderColor: =RGBA(189, 49, 51, 1)
                 HoverContentColor: =RGBA(255, 255, 255, 1)
                 HoverFillColor: =RGBA(184, 0, 0, 1)
-                LayoutMinHeight: =20
+                LayoutMinHeight: =45
                 LayoutMinWidth: =280
                 OnCancel: =false
                 OnScan: |
@@ -104,6 +106,30 @@ com_Header As CanvasComponent:
                         ScannedItem,
                         First(BarcodeReader2.Barcodes).Value
                     );
+                    
+                    ClearCollect(
+                        colSortedItems,
+                        SortByColumns(
+                            Filter(
+                                colLines,
+                                Barcode = ScannedItem
+                            ), 
+                            "Barcode"
+                        )
+                    );
+                    
+                    ClearCollect(
+                        colFinalList,
+                        colSortedItems,
+                        SortByColumns(
+                            Filter(
+                                colLines,
+                                Barcode <> ScannedItem
+                            ),
+                            "Barcode"
+                        )
+                    );
+                    
                     If(
                         App.ActiveScreen = scr_Entry,
                         Set(
@@ -127,9 +153,9 @@ com_Header As CanvasComponent:
                 TextAlignment: =Align.Center
                 TextColor: =RGBA(184, 0, 0, 1)
                 VerticalAlign: =VerticalAlign.Middle
-                Visible: =isMobile
+                Visible: =true//isMobile
                 Width: =100
-                X: =0
-                Y: =0
-                ZIndex: =2
+                X: =40
+                Y: =40
+                ZIndex: =5
 
