--- a/BSiNS/Src/Components/com_Alert.fx.yaml
+++ b/BSiNS/Src/Components/com_Alert.fx.yaml
@@ -1,7 +1,9 @@
 com_Alert As CanvasComponent:
+    Duration: =600
     Fill: =RGBA(0, 0, 0, 0)
     Height: =40
-    Message: ="Text"
+    Message: =""
+    ShowAlert: =false
     Type: ="Info"
     Width: =350
     X: =0
@@ -26,7 +28,8 @@ com_Alert As CanvasComponent:
                 RGBA(215, 58, 60, 0.15)
             )
         Height: =40
-        Width: =Parent.Width
+        Width: =Parent.Width - 20
+        X: =App.ActiveScreen.Width - TimerShowControl.Value
         Y: =40
         ZIndex: =1
 
@@ -117,4 +120,47 @@ com_Alert As CanvasComponent:
                     X: =0
                     Y: =(Container7.Height-NotificationText.Height)/2
                     ZIndex: =1
+
+    TimerShowControl As timer:
+        BorderColor: =App.Theme.Colors.Primary
+        DisabledBorderColor: =RGBA(244, 244, 244, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
+        Duration: =App.ActiveScreen.Width - 20
+        Fill: =App.Theme.Colors.Primary
+        Font: =App.Theme.Font
+        HoverBorderColor: =App.Theme.Colors.Darker10
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =App.Theme.Colors.Darker10
+        OnTimerEnd: =Set(timerHideShow, true);
+        OnTimerStart: =Set(timerHideShow, false);
+        PressedBorderColor: =App.Theme.Colors.Darker40
+        PressedColor: =Self.Color
+        PressedFill: =App.Theme.Colors.Darker40
+        Reset: =timerReset
+        Start: =com_Alert.ShowAlert
+        Visible: =false
+        Width: =Parent.Width
+        ZIndex: =2
+
+    TimerHideControl As timer:
+        BorderColor: =App.Theme.Colors.Primary
+        DisabledBorderColor: =RGBA(244, 244, 244, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
+        Duration: =com_Alert.Duration
+        Fill: =App.Theme.Colors.Primary
+        Font: =App.Theme.Font
+        HoverBorderColor: =App.Theme.Colors.Darker10
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =App.Theme.Colors.Darker10
+        OnTimerEnd: =Set(timerReset, true);
+        OnTimerStart: =Set(timerReset, false);
+        PressedBorderColor: =App.Theme.Colors.Darker40
+        PressedColor: =Self.Color
+        PressedFill: =App.Theme.Colors.Darker40
+        Start: =timerHideShow
+        Visible: =false
+        Width: =Parent.Width
+        ZIndex: =3
 
