--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -73,6 +73,8 @@ com_Modal As CanvasComponent:
                         FillPortions: =1
                         FontColor: =RGBA(255, 255, 255, 1)
                         Height: =32
+                        LayoutMinHeight: =32
+                        LayoutMinWidth: =96
                         Size: =20
                         Text: ="Unesite podatke"
                         Width: =96
