--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -211,6 +211,10 @@ com_Modal_1 As CanvasComponent:
                                     reportFileContent = "{}",
                                     //true
                                     Reset(FileNameNumberInput);
+                                    Set(alertDuration, 600);
+                                    Set(alertType, "Error");
+                                    Set(alertMsg, "Povrat je već izvršen");
+                                    Set(alertShow, true);
                                     Notify(
                                     "Povrat je već izvršen.",
                                     NotificationType.Error,
