--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -7,6 +7,9 @@
             isLoading,
             true
         );
+        Set(alertShow,false);
+        
+        
         Set(
             SelectedDocumentName,
             Blank()
