--- a/BSiNS/Src/scr_XMLNalogPovrata.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogPovrata.fx.yaml
@@ -420,7 +420,7 @@
         IsNabavniNalog: =true
         LineId: =com_PovGalleries.SelectedLine.Line_No
         LotNo: =com_PovGalleries.SelectedEntry.LOT_No
-        LotNoPropVisible: =true
+        LotNoPropVisible: =false
         Quantity: =Abs(com_PovGalleries.SelectedEntry.Quantity)
         QuantityCompleted: =Abs(com_PovGalleries.SelectedEntry.Quantity_Completed)
         QuantityNewLOT: =Abs(com_PovGalleries.SelectedEntry.Quantity_NewLOT)
