--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -221,6 +221,8 @@ com_Modal_1 As CanvasComponent:
                                         isModalOpen,
                                         false
                                     );
+                                    Set(SelectedFile, fileName);
+                                    Set(SelectedQueue, InProgress);
                                     Navigate(
                                         scr_XMLNalogPovrata,
                                         ScreenTransition.Fade,
