--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -2,6 +2,7 @@ com_Modal_1 As CanvasComponent:
     ChildTabPriority: =
     Fill: =RGBA(0, 0, 0, 0)
     Height: =App.Height
+    OnReset: =
     Width: =App.Width
     X: =0
     Y: =0
@@ -227,7 +228,8 @@ com_Modal_1 As CanvasComponent:
                                         scr_XMLNalogPovrata,
                                         ScreenTransition.Fade,
                                         {xmlData: ParseJSON(reportFileContent).Sales_Header}
-                                    )
+                                    );
+                                    Reset(FileNameNumberInput);
                                 )
                             );
                             
