--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -721,7 +721,7 @@ com_Galleries As CanvasComponent:
                             Blank()
                         );
                         Reset(glr_Entries);
-                    Visible: =com_Galleries.EntriesToDisplay && com_Galleries.AddNew && !IsBlank(LookUp(lockedItems, entryId = ThisItem.Entry_No))
+                    Visible: =com_Galleries.VisibleResEntryList && com_Galleries.AddNew && !IsBlank(LookUp(lockedItems, entryId = ThisItem.Entry_No))
                     Width: =32
                     X: =Parent.TemplateWidth - 50
                     Y: =Body2_7.Y - 10
@@ -834,7 +834,7 @@ com_Galleries As CanvasComponent:
                     Icon: =Icon.Trash
                     OnSelect: |
                         =Remove(colEntries, LookUp(colEntries, Entry_No = glr_Entries.Selected.Entry_No))
-                    Visible: =com_Galleries.EntriesToDisplay && com_Galleries.AddNew && IsBlank(LookUp(lockedItems, entryId = ThisItem.Entry_No))
+                    Visible: =com_Galleries.VisibleResEntryList && com_Galleries.AddNew && IsBlank(LookUp(lockedItems, entryId = ThisItem.Entry_No))
                     Width: =32
                     X: =Parent.TemplateWidth - 50
                     Y: =Body2_7.Y - 10
